--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -3917,7 +3917,7 @@
     "selected_all": "valgt alle",
     "set_temp_error": "Den indstillede temperatur kan ikke opnås. Venligst ændr vandtemperaturen.",
     "no_device_support_eco_key": "Ingen enheder tilgængelige, sørg for, at dine enheder er tilsluttet og understøtter ECO-tilstand.",
-    "appliance_disconnect_cannot_open_eco": "Enheden er afbrudt, kontroller venligst, om WiFi og fjernbetjening er aktiveret.",
+    "appliance_disconnect_cannot_open_eco": "Enheden er afbrudt. Tjek venligst om Wi-Fi og fjernbetjening er aktiveret.",
     "power_on_remote_eabled_tips": "Kun tilgængelig, når enheden er tændt, og fjernstart er aktiveret.",
     "power_on_tips": "Kun tilgængelig, når enheden er tændt.",
     "asko_oven_on_during_on": "ON under brug",
@@ -4149,5 +4149,41 @@
     "CL_DV_HOB_refresh_mode": "Opdateringstilstand",
     "hob_induction3_new_tips": "Lær, hvordan du forbinder dit smarte køkkengrej, og gennemse en lang række trin-for-trin-opskrifter, specielt lavet til temperaturpræcis madlavning.",
     "CL_DV_OV_added_successfully": "Tilføjet med succes!",
-    "add_routine": "TILFØJ RUTINE"
+    "add_routine": "TILFØJ RUTINE",
+    "CL_DV_PIND_update_blue_tooth": "Sørg for, at din bluetooth er tændt.",
+    "CL_DV_PIND_accessory_firmware_update": "Opdatering af tilbehørsfirmware",
+    "CL_CF_CS_ble_scan_not_list": "Hvis din enhed ikke er på listen, kan du klikke på 'PRØV IGEN' for at søge igen, eller klik på 'NÆSTE' for at konfigurere netværket på en anden måde.",
+    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke fundet nogen enhed på bluetooth. Du kan klikke på 'PRØV IGEN' for at søge igen, eller klik på 'NÆSTE' for at konfigurere netværket på en anden måde.",
+    "CL_DV_WM_pump_cleaning": "Rengøring af pumpe...",
+    "CL_DV_WM_autodoes_tip": "Aktiver denne funktion, og din enhed dispenserer smart vaskemiddel og skyllemiddel, mens du vasker.",
+    "CL_DV_WM_detergent_department_key": "RUM TIL VASKEMIDDEL",
+    "CL_DV_WM_Dosage_Amount_key": "Doseringsmængde",
+    "CL_DV_WM_softener_department_key": "Blødgøringsrum",
+    "CL_DV_WM_auto_does_with_detergent": "Autodosering med opvaskemiddel",
+    "CL_DV_WM_same_detergent": "Samme vaskemiddel",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normal dosering: 4 ~ 5 kg tøjvægt.",
+    "CL_DV_WM_pump_clean_note_1": "Bemærk: Hvis du ønsker at ændre indholdet af dispenseringskomponenten, skal du huske det ",
+    "CL_DV_WM_pump_clean_note_2": "rengør først komponenten.",
+    "CL_DV_WM_Pump_clean_key": "Pumpe ren",
+    "CL_DV_WM_pump_clean_how_to_use": "Hvordan bruges?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Tøm og fyld rummet med vand, før du aktiverer pumperens funktion.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktiver pumpens rengøringsfunktion fra maskinsiden.",
+    "CL_DV_WM_pump_clean_when_to_use": "Hvornår skal man bruge?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.Hvis du ønsker at ændre indholdet i \"Blødgøringsmiddel\"-rummet, skal du sørge for, at det er tomt, og at pumpen skal rengøres, før næste brug. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Mere end et halvt år, du ikke har renset pumpen, kan du aktivere pumpens rengøringsfunktion.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARD AUTODOSERING",
+    "CL_DV_WM_compartment_in_use_key": "RUMM I BRUG",
+    "CL_CF_CS_oven_g_800_cs_1": "Indstil enheden til normale driftsforhold.\n Tryk på menuikonet.",
+    "CL_CF_CS_oven_g_800_cs_2": "Tryk og hold på Wi-Fi-ikonet i cirka 3-6 sekunder, indtil det når \"C\" på tidslinjen.",
+    "CL_CF_CS_oven_g_800_cs_3": "Enhedens netværk er nu åbent for tilslutning i 5 minutter.\n Klik på NÆSTE for at fortsætte.",
+    "CL_CF_CS_oven_g_800_p_1": "Indstil enheden til normale driftsforhold.\n Tryk på menuikonet.",
+    "CL_CF_CS_oven_g_800_p_2": "Tryk og hold på Wi-Fi-ikonet i cirka 6-9 sekunder, indtil det når \"P\" på tidslinjen.",
+    "CL_CF_CS_oven_g_800_p_3": "Enheden er nu klar til parring i 3 minutter.\n Klik på NÆSTE for at fortsætte.",
+    "CL_DV_PIND_update_fail_tip1": "Der opstod en uventet fejl. Firmwareopdateringen mislykkedes.",
+    "CL_DV_PIND_update_fail_tip4": "Prøv venligst igen for at opdatere dit tilbehør.",
+    "CL_DV_PIND_update_fail_tip2": "Hold dine enheder i nærheden, mens du opdaterer.",
+    "CL_DV_PIND_update_fail_tip3": "Tjek din bluetooth-forbindelse.",
+    "room_good_content": "Dette værelses aircondition er god. Optimering er ikke nødvendig for nu.",
+    "edit_address_title": "REDIGER ADRESSE",
+    "edit_profile_title": "REDIGER BRUGERPROFIL"
 }
