--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -3917,7 +3917,7 @@
     "selected_all": "seleccionado todo",
     "set_temp_error": "La temperatura establecida no se puede alcanzar. Por favor, modifique la temperatura del agua.",
     "no_device_support_eco_key": "No hay dispositivos disponibles, asegúrese de que sus dispositivos estén conectados y admitan el modo ECO.",
-    "appliance_disconnect_cannot_open_eco": "El dispositivo está desconectado, por favor verifique si el WiFi y el control remoto están habilitados.",
+    "appliance_disconnect_cannot_open_eco": "El dispositivo está desconectado, verifique si el Wi-Fi y el control remoto están habilitados.",
     "power_on_remote_eabled_tips": "Sólo disponible cuando el dispositivo está encendido y el inicio remoto está habilitado.",
     "power_on_tips": "Sólo disponible cuando el dispositivo está encendido.",
     "asko_oven_on_during_on": "ENCENDIDO durante el uso",
@@ -4149,5 +4149,41 @@
     "CL_DV_HOB_refresh_mode": "Modo de actualización",
     "hob_induction3_new_tips": "Aprenda a conectar sus utensilios de cocina inteligentes y explore una amplia gama de recetas paso a paso, diseñadas específicamente para cocinar con temperatura precisa.",
     "CL_DV_OV_added_successfully": "¡Añadido exitosamente!",
-    "add_routine": "AGREGAR RUTINA"
+    "add_routine": "AGREGAR RUTINA",
+    "CL_DV_PIND_update_blue_tooth": "Asegúrese de que su bluetooth esté encendido.",
+    "CL_DV_PIND_accessory_firmware_update": "Actualización del firmware de los accesorios",
+    "CL_CF_CS_ble_scan_not_list": "Si su dispositivo no está en la lista, puede hacer clic en “INTENTAR OTRA VEZ” para buscar nuevamente o hacer clic en “SIGUIENTE” para configurar la red de otra manera.",
+    "CL_CF_CS_ble_scan_have_not_found": "No hemos encontrado ningún dispositivo en bluetooth. Puede hacer clic en \"INTENTAR OTRA VEZ\" para buscar nuevamente o hacer clic en \"SIGUIENTE\" para configurar la red de otra manera.",
+    "CL_DV_WM_pump_cleaning": "Bomba de limpieza...",
+    "CL_DV_WM_autodoes_tip": "Habilite esta función y su dispositivo dispensará de manera inteligente detergente y suavizante de telas mientras lava su ropa.",
+    "CL_DV_WM_detergent_department_key": "COMPARTIMENTO DE DETERGENTE",
+    "CL_DV_WM_Dosage_Amount_key": "Cantidad de dosis",
+    "CL_DV_WM_softener_department_key": "COMPARTIMENTO DEL SUAVIZANTE",
+    "CL_DV_WM_auto_does_with_detergent": "Autodosis con detergente",
+    "CL_DV_WM_same_detergent": "El mismo detergente",
+    "CL_DV_WM_normal_dosage_weight_tip": "Dosis normal: 4~5 kg de peso de ropa.",
+    "CL_DV_WM_pump_clean_note_1": "Notas: Si desea cambiar el contenido del componente de dispensación, recuerde ",
+    "CL_DV_WM_pump_clean_note_2": "Primero limpie el componente.",
+    "CL_DV_WM_Pump_clean_key": "Bomba limpia",
+    "CL_DV_WM_pump_clean_how_to_use": "¿Cómo se utiliza?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Vacíe y llene el compartimento con agua antes de activar la función de limpieza de la bomba.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2.Active la función de limpieza de la bomba desde el lado de la máquina.",
+    "CL_DV_WM_pump_clean_when_to_use": "¿Cuando usarlo?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Si desea cambiar el contenido del compartimento “Suavizante”, asegúrese de que esté vacío y ejecute la función de limpieza de la bomba antes del próximo uso. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Si no ha limpiado la bomba durante más de medio año, puede activar la función de limpieza de la bomba.",
+    "CL_DV_WM_standard_auto_does_key": "DOSIS AUTOMÁTICA ESTÁNDAR",
+    "CL_DV_WM_compartment_in_use_key": "COMPARTIMENTO EN USO",
+    "CL_CF_CS_oven_g_800_cs_1": "Ponga el dispositivo en condiciones normales de funcionamiento.\n Toque el icono del menú.",
+    "CL_CF_CS_oven_g_800_cs_2": "Mantenga presionado el ícono de Wi-Fi durante aproximadamente 3 a 6 segundos hasta que llegue a la \"C\" en la línea de tiempo.",
+    "CL_CF_CS_oven_g_800_cs_3": "La red del dispositivo ahora está abierta para la conexión durante 5 minutos.\n Haga clic en SIGUIENTE para continuar.",
+    "CL_CF_CS_oven_g_800_p_1": "Ponga el dispositivo en condiciones normales de funcionamiento.\n Toque el icono del menú.",
+    "CL_CF_CS_oven_g_800_p_2": "Mantenga presionado el ícono de Wi-Fi durante aproximadamente 6 a 9 segundos hasta que llegue a la \"P\" en la línea de tiempo.",
+    "CL_CF_CS_oven_g_800_p_3": "El dispositivo ahora está listo para emparejarse durante 3 minutos.\n Haga clic en SIGUIENTE para continuar.",
+    "CL_DV_PIND_update_fail_tip1": "Se produjo un error inesperado. La actualización del firmware no se realizó correctamente.",
+    "CL_DV_PIND_update_fail_tip4": "Intente nuevamente actualizar su accesorio.",
+    "CL_DV_PIND_update_fail_tip2": "Mantenga sus dispositivos cerca mientras realiza la actualización.",
+    "CL_DV_PIND_update_fail_tip3": "Comprueba tu conexión bluetooth.",
+    "room_good_content": "El aire acondicionado de esta habitación es bueno. No es necesario optimizarlo por ahora.",
+    "edit_address_title": "EDITAR DIRECCIÓN",
+    "edit_profile_title": "EDITAR PERFIL DE USUARIO"
 }
