--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -3917,7 +3917,7 @@
     "selected_all": "valittu kaikki",
     "set_temp_error": "Asetettua lämpötilaa ei voida saavuttaa. Muuta vesireitin lämpötilaa.",
     "no_device_support_eco_key": "Ei laitteita saatavilla, varmista, että laitteesi ovat yhdistetty ja tukevat ECO-tilaa.",
-    "appliance_disconnect_cannot_open_eco": "Laite on irrotettu, tarkista, että WiFi ja kaukosäädin ovat käytössä.",
+    "appliance_disconnect_cannot_open_eco": "Laitteen yhteys on katkaistu, tarkista, ovatko Wi-Fi ja kaukosäädin käytössä.",
     "power_on_remote_eabled_tips": "Käytettävissä vain, kun laite on päällä ja etäkäynnistys on käytössä.",
     "power_on_tips": "Käytettävissä vain, kun laite on päällä.",
     "asko_oven_on_during_on": "PÄÄLLÄ käytön aikana",
@@ -4149,5 +4149,41 @@
     "CL_DV_HOB_refresh_mode": "Päivitystila",
     "hob_induction3_new_tips": "Opi yhdistämään älykkäät keittoastiasi ja selaamaan laajaa valikoimaa vaiheittaisia ​​reseptejä, jotka on suunniteltu erityisesti lämpötilan tarkkaan ruoanlaittoon.",
     "CL_DV_OV_added_successfully": "Lisätty onnistuneesti!",
-    "add_routine": "LISÄÄ RUTIIINI"
+    "add_routine": "LISÄÄ RUTIIINI",
+    "CL_DV_PIND_update_blue_tooth": "Varmista, että Bluetooth on päällä.",
+    "CL_DV_PIND_accessory_firmware_update": "Lisävarusteiden laiteohjelmistopäivitys",
+    "CL_CF_CS_ble_scan_not_list": "Jos laitettasi ei ole luettelossa, voit etsiä uudelleen napsauttamalla YRITÄ UUDELLEEN tai määrittää verkon muulla tavalla napsauttamalla SEURAAVA.",
+    "CL_CF_CS_ble_scan_have_not_found": "Emme löytäneet Bluetooth-laitetta. Voit etsiä uudelleen napsauttamalla YRITÄ UUDELLEEN tai määrittää verkon muulla tavalla napsauttamalla SEURAAVAA.",
+    "CL_DV_WM_pump_cleaning": "Pumpun puhdistus...",
+    "CL_DV_WM_autodoes_tip": "Ota tämä ominaisuus käyttöön, niin laitteesi annostelee pesuainetta ja huuhteluainetta älykkäästi samalla, kun peset pyykkiä.",
+    "CL_DV_WM_detergent_department_key": "PESUAINELOKERO",
+    "CL_DV_WM_Dosage_Amount_key": "Annostusmäärä",
+    "CL_DV_WM_softener_department_key": "PUHDISTUSLAITE",
+    "CL_DV_WM_auto_does_with_detergent": "Automaattinen annostelu pesuaineella",
+    "CL_DV_WM_same_detergent": "Sama pesuaine",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normaali annostus: 4-5 kg ​​vaatteiden paino.",
+    "CL_DV_WM_pump_clean_note_1": "Huomautuksia: Jos haluat muuttaa annostelukomponentin sisältöä, muista se ",
+    "CL_DV_WM_pump_clean_note_2": "puhdista komponentti ensin.",
+    "CL_DV_WM_Pump_clean_key": "Pumppu puhdas",
+    "CL_DV_WM_pump_clean_how_to_use": "Kuinka käyttää?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Tyhjennä ja täytä lokero vedellä ennen kuin otat pumpun puhdistustoiminnon käyttöön.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2.Aktivoi pumpun puhdistustoiminto koneen puolelta.",
+    "CL_DV_WM_pump_clean_when_to_use": "Milloin käyttää?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.Jos haluat muuttaa \"Puhdistusaine\"-osaston sisältöä, varmista, että se on tyhjä ja suorita pumpun puhdistustoiminto ennen seuraavaa käyttöä. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Et ole puhdistanut pumppua yli puoleen vuoteen, voit aktivoida pumpun puhdistustoiminnon.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARD AUTODOSE",
+    "CL_DV_WM_compartment_in_use_key": "LOKESTO KÄYTÖSSÄ",
+    "CL_CF_CS_oven_g_800_cs_1": "Aseta laite normaaleihin käyttöolosuhteisiin.\n Napauta valikkokuvaketta.",
+    "CL_CF_CS_oven_g_800_cs_2": "Napauta Wi-Fi-kuvaketta ja pidä sitä painettuna noin 3–6 sekuntia, kunnes se saavuttaa aikajanan C-merkin.",
+    "CL_CF_CS_oven_g_800_cs_3": "Laiteverkko on nyt avoinna yhteyden muodostamista varten 5 minuutin ajan.\n Napsauta SEURAAVA jatkaaksesi.",
+    "CL_CF_CS_oven_g_800_p_1": "Aseta laite normaaleihin käyttöolosuhteisiin.\n Napauta valikkokuvaketta.",
+    "CL_CF_CS_oven_g_800_p_2": "Napauta Wi-Fi-kuvaketta ja pidä sitä painettuna noin 6–9 sekuntia, kunnes se saavuttaa aikajanan P-merkin.",
+    "CL_CF_CS_oven_g_800_p_3": "Laite on nyt valmis pariliitoksen muodostamiseen 3 minuutin ajan.\n Napsauta SEURAAVA jatkaaksesi.",
+    "CL_DV_PIND_update_fail_tip1": "Tapahtui odottamaton virhe. Laiteohjelmiston päivitys epäonnistui.",
+    "CL_DV_PIND_update_fail_tip4": "Yritä uudelleen päivittää lisävaruste.",
+    "CL_DV_PIND_update_fail_tip2": "Pidä laitteesi lähellä päivityksen aikana.",
+    "CL_DV_PIND_update_fail_tip3": "Tarkista Bluetooth-yhteys.",
+    "room_good_content": "Tämän huoneen ilmastointi on hyvä. Optimointia ei toistaiseksi tarvita.",
+    "edit_address_title": "MUOKKAA OSOITETTA",
+    "edit_profile_title": "MUOKKAA KÄYTTÄJÄPROFIILIA"
 }
