--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -3917,7 +3917,7 @@
     "selected_all": "נבחר הכל",
     "set_temp_error": "לא ניתן להגיע לטמפרטורה שנקבעה. נא לשנות את טמפרטורת המים.",
     "no_device_support_eco_key": "אין מכשיר זמין, אנא ודא שהמכשירים שלך מחוברים ותומכים במצב ECO.",
-    "appliance_disconnect_cannot_open_eco": "המכשיר מנותק, אנא בדוק אם ה-WIFI והשלט רחוק מופעלים.",
+    "appliance_disconnect_cannot_open_eco": "המכשיר מנותק, אנא בדוק אם Wi-Fi ושלט רחוק מופעלים.",
     "power_on_remote_eabled_tips": "זמין רק כאשר המכשיר מופעל והפעלה מרחוק מופעלת.",
     "power_on_tips": "זמין רק כשהמכשיר מופעל.",
     "asko_oven_on_during_on": "פועל במהלך השימוש",
@@ -4149,5 +4149,41 @@
     "CL_DV_HOB_refresh_mode": "מצב רענון",
     "hob_induction3_new_tips": "למד כיצד לחבר את כלי הבישול החכמים שלך ולעיין במגוון רחב של מתכונים שלב אחר שלב, שנעשו במיוחד עבור בישול מדויק בטמפרטורה.",
     "CL_DV_OV_added_successfully": "נוסף בהצלחה!",
-    "add_routine": "הוסף שגרה"
+    "add_routine": "הוסף שגרה",
+    "CL_DV_PIND_update_blue_tooth": "ודא שה-Bluetooth שלך מופעל.",
+    "CL_DV_PIND_accessory_firmware_update": "עדכון קושחת אביזרים",
+    "CL_CF_CS_ble_scan_not_list": "אם המכשיר שלך אינו מופיע ברשימה, תוכל ללחוץ על 'נסה שוב' כדי לחפש שוב, או ללחוץ על 'הבא' כדי להגדיר את הרשת בדרך אחרת.",
+    "CL_CF_CS_ble_scan_have_not_found": "לא מצאנו שום מכשיר ב-Bluetooth. אתה יכול ללחוץ על 'נסה שוב' כדי לחפש שוב, או ללחוץ על 'הבא' כדי להגדיר את הרשת בדרך אחרת.",
+    "CL_DV_WM_pump_cleaning": "משאבת ניקוי...",
+    "CL_DV_WM_autodoes_tip": "הפעל תכונה זו והמכשיר שלך יוציא בצורה חכמה חומר ניקוי ומרכך כביסה בזמן שאתה מכבס.",
+    "CL_DV_WM_detergent_department_key": "תא חומרי ניקוי",
+    "CL_DV_WM_Dosage_Amount_key": "כמות מינון",
+    "CL_DV_WM_softener_department_key": "תא מרכך",
+    "CL_DV_WM_auto_does_with_detergent": "מינון אוטומטי עם חומר ניקוי",
+    "CL_DV_WM_same_detergent": "אותו חומר ניקוי",
+    "CL_DV_WM_normal_dosage_weight_tip": "מינון רגיל: 4 ~ 5 ק\"ג משקל בגדים.",
+    "CL_DV_WM_pump_clean_note_1": "הערות: אם ברצונך לשנות את התוכן של רכיב המחלקה, אנא זכור לעשות זאת ",
+    "CL_DV_WM_pump_clean_note_2": "נקה תחילה את הרכיב.",
+    "CL_DV_WM_Pump_clean_key": "משאבה נקייה",
+    "CL_DV_WM_pump_clean_how_to_use": "איך להשתמש?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. רוקן ומלא את התא במים לפני הפעלת פעולת ניקוי המשאבה.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. הפעל את פעולת ניקוי המשאבה מצד המכונה.",
+    "CL_DV_WM_pump_clean_when_to_use": "מתי להשתמש?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. אם ברצונך לשנות את התוכן בתא \"מרכך\", אנא ודא שהוא ריק והפעל את פעולת ניקוי המשאבה לפני השימוש הבא. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. יותר מחצי שנה לא נקה את המשאבה, אתה יכול להפעיל את פונקציית ניקוי המשאבה.",
+    "CL_DV_WM_standard_auto_does_key": "מינון אוטומטי סטנדרטי",
+    "CL_DV_WM_compartment_in_use_key": "תא בשימוש",
+    "CL_CF_CS_oven_g_800_cs_1": "הגדר את המכשיר לתנאי הפעלה רגילים.\n הקש על סמל התפריט.",
+    "CL_CF_CS_oven_g_800_cs_2": "הקש והחזק את סמל ה-Wi-Fi למשך כ-3-6 שניות עד שהוא מגיע ל-\"C\" בציר הזמן.",
+    "CL_CF_CS_oven_g_800_cs_3": "רשת המכשיר פתוחה כעת לחיבור למשך 5 דקות.\n לחץ על NEXT כדי להמשיך.",
+    "CL_CF_CS_oven_g_800_p_1": "הגדר את המכשיר לתנאי הפעלה רגילים.\n הקש על סמל התפריט.",
+    "CL_CF_CS_oven_g_800_p_2": "הקש והחזק את סמל ה-Wi-Fi למשך כ-6-9 שניות עד שהוא מגיע ל-\"P\" בציר הזמן.",
+    "CL_CF_CS_oven_g_800_p_3": "המכשיר מוכן כעת להתאמה למשך 3 דקות.\n לחץ על NEXT כדי להמשיך.",
+    "CL_DV_PIND_update_fail_tip1": "אירעה שגיאה בלתי צפויה. עדכון הקושחה לא הצליח.",
+    "CL_DV_PIND_update_fail_tip4": "אנא נסה שוב לעדכן את האביזר שלך.",
+    "CL_DV_PIND_update_fail_tip2": "שמור את המכשירים שלך בקרבת מקום בזמן העדכון.",
+    "CL_DV_PIND_update_fail_tip3": "בדוק את חיבור ה-Bluetooth שלך.",
+    "room_good_content": "מיזוג האוויר של החדר הזה טוב. אין צורך באופטימיזציה לעת עתה.",
+    "edit_address_title": "ערוך כתובת",
+    "edit_profile_title": "ערוך את פרופיל המשתמש"
 }
