--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -3917,7 +3917,7 @@
     "selected_all": "全选",
     "set_temp_error": "设定温度无法达到。请修改水路温度。",
     "no_device_support_eco_key": "没有可用的设备，请确保您的设备已连接并支持ECO模式。",
-    "appliance_disconnect_cannot_open_eco": "设备已断开连接，请检查WIFI和遥控是否启用。",
+    "appliance_disconnect_cannot_open_eco": "设备已断开连接，请检查Wi-Fi和远程控制是否已启用。",
     "power_on_remote_eabled_tips": "仅当设备已通电并且远程启动已启用时可用。",
     "power_on_tips": "仅当设备开启时可用。",
     "asko_oven_on_during_on": "使用时开启",
@@ -4149,5 +4149,41 @@
     "CL_DV_HOB_refresh_mode": "刷新模式",
     "hob_induction3_new_tips": "了解如何连接您的智能炊具并浏览各种专为精确温度烹饪而设计的分步食谱。",
     "CL_DV_OV_added_successfully": "添加成功！",
-    "add_routine": "添加例程"
+    "add_routine": "添加例程",
+    "CL_DV_PIND_update_blue_tooth": "确保您的蓝牙已打开。",
+    "CL_DV_PIND_accessory_firmware_update": "配件固件更新",
+    "CL_CF_CS_ble_scan_not_list": "如果您的设备不在列表中，您可以点击“重试”重新搜索，或点击“下一步”以其他方式配置网络。",
+    "CL_CF_CS_ble_scan_have_not_found": "我们没有在蓝牙上找到任何设备。您可以点击“重试”重新搜索，或点击“下一步”以其他方式配置网络。",
+    "CL_DV_WM_pump_cleaning": "清洗泵...",
+    "CL_DV_WM_autodoes_tip": "启用此功能，您的设备将在您洗衣服时智能地分配洗涤剂和织物柔软剂。",
+    "CL_DV_WM_detergent_department_key": "洗涤剂隔间",
+    "CL_DV_WM_Dosage_Amount_key": "用量",
+    "CL_DV_WM_softener_department_key": "柔顺剂隔间",
+    "CL_DV_WM_auto_does_with_detergent": "自动添加清洁剂",
+    "CL_DV_WM_same_detergent": "同样的洗涤剂",
+    "CL_DV_WM_normal_dosage_weight_tip": "正常用量：4~5kg衣重。",
+    "CL_DV_WM_pump_clean_note_1": "注意：如果您想更改分配组件的内容，请记住 ",
+    "CL_DV_WM_pump_clean_note_2": "先清洁组件。",
+    "CL_DV_WM_Pump_clean_key": "泵清洁",
+    "CL_DV_WM_pump_clean_how_to_use": "如何使用？",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. 在启动泵清洁功能之前，请先清空隔间并用水填充。",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2.从机器侧激活泵清洁功能。",
+    "CL_DV_WM_pump_clean_when_to_use": "何时使用？",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.如果您想更换“软水器”隔间中的内容，请确保其是空的，并在下次使用前运行泵清洁功能。 ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2.如果您超过半年没有清洁过水泵，您可以激活水泵清洁功能。",
+    "CL_DV_WM_standard_auto_does_key": "标准自动剂量",
+    "CL_DV_WM_compartment_in_use_key": "隔间使用中",
+    "CL_CF_CS_oven_g_800_cs_1": "将设备设置为正常运行状态。\n点击菜单图标。",
+    "CL_CF_CS_oven_g_800_cs_2": "点击并按住 Wi-Fi 图标约 3-6 秒，直到到达时间线上的“C”。",
+    "CL_CF_CS_oven_g_800_cs_3": "设备网络现已开放连接，持续时间为 5 分钟。\n单击“下一步”继续。",
+    "CL_CF_CS_oven_g_800_p_1": "将设备设置为正常运行状态。\n点击菜单图标。",
+    "CL_CF_CS_oven_g_800_p_2": "点击并按住 Wi-Fi 图标约 6-9 秒，直到到达时间线上的“P”。",
+    "CL_CF_CS_oven_g_800_p_3": "该设备现在已准备好配对，等待 3 分钟。\n单击“下一步”继续。",
+    "CL_DV_PIND_update_fail_tip1": "发生意外错误。固件更新失败。",
+    "CL_DV_PIND_update_fail_tip4": "请再次尝试更新您的配件。",
+    "CL_DV_PIND_update_fail_tip2": "更新时请将设备放在附近。",
+    "CL_DV_PIND_update_fail_tip3": "检查您的蓝牙连接。",
+    "room_good_content": "房间状态良好，暂不需要优化。",
+    "edit_address_title": "编辑地址",
+    "edit_profile_title": "编辑用户资料"
 }
