--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -3917,7 +3917,7 @@
     "selected_all": "pilih semua",
     "set_temp_error": "Suhu yang ditetapkan tidak dapat dicapai. Harap ubah suhu saluran air.",
     "no_device_support_eco_key": "Tidak ada perangkat yang tersedia, pastikan perangkat Anda terhubung dan mendukung mode ECO.",
-    "appliance_disconnect_cannot_open_eco": "Perangkat terputus, silakan periksa apakah WIFI dan Remote Control diaktifkan.",
+    "appliance_disconnect_cannot_open_eco": "Perangkat terputus, silakan periksa apakah Wi-Fi dan Kontrol Jarak Jauh diaktifkan.",
     "power_on_remote_eabled_tips": "Hanya tersedia saat perangkat dihidupkan dan start jarak jauh diaktifkan.",
     "power_on_tips": "Hanya tersedia saat perangkat dihidupkan.",
     "asko_oven_on_during_on": "AKTIF saat digunakan",
@@ -4149,5 +4149,41 @@
     "CL_DV_HOB_refresh_mode": "Mode penyegaran",
     "hob_induction3_new_tips": "Pelajari cara menghubungkan peralatan memasak pintar Anda dan telusuri berbagai resep langkah demi langkah, yang dibuat khusus untuk memasak dengan suhu tepat.",
     "CL_DV_OV_added_successfully": "Berhasil ditambahkan!",
-    "add_routine": "TAMBAHKAN RUTINITAS"
+    "add_routine": "TAMBAHKAN RUTINITAS",
+    "CL_DV_PIND_update_blue_tooth": "Pastikan bluetooth Anda dihidupkan.",
+    "CL_DV_PIND_accessory_firmware_update": "Pembaruan firmware aksesori",
+    "CL_CF_CS_ble_scan_not_list": "Jika perangkat Anda tidak tercantum, Anda dapat mengeklik 'COBA LAGI' untuk mencari lagi, atau klik 'LANJUTKAN' untuk mengonfigurasi jaringan dengan cara lain.",
+    "CL_CF_CS_ble_scan_have_not_found": "Kami tidak menemukan perangkat apa pun di bluetooth. Anda dapat mengeklik 'COBA LAGI' untuk mencari lagi, atau klik 'LANJUTKAN' untuk mengonfigurasi jaringan dengan cara lain.",
+    "CL_DV_WM_pump_cleaning": "Pompa pembersih...",
+    "CL_DV_WM_autodoes_tip": "Aktifkan fitur ini dan perangkat Anda akan secara pintar mengeluarkan deterjen dan pelembut kain saat Anda mencuci.",
+    "CL_DV_WM_detergent_department_key": "RUANG DETERJEN",
+    "CL_DV_WM_Dosage_Amount_key": "Jumlah Dosis",
+    "CL_DV_WM_softener_department_key": "KOMPARTEMEN PELEMBUT",
+    "CL_DV_WM_auto_does_with_detergent": "Dosis Otomatis Dengan Deterjen",
+    "CL_DV_WM_same_detergent": "Deterjen yang sama",
+    "CL_DV_WM_normal_dosage_weight_tip": "Dosis normal: berat pakaian 4~5kg.",
+    "CL_DV_WM_pump_clean_note_1": "Catatan: Jika Anda ingin mengubah isi komponen pengeluaran, harap diingat untuk ",
+    "CL_DV_WM_pump_clean_note_2": "Bersihkan komponennya terlebih dahulu.",
+    "CL_DV_WM_Pump_clean_key": "Pompa bersih",
+    "CL_DV_WM_pump_clean_how_to_use": "Bagaimana cara penggunaannya?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Kosongkan dan isi kompartemen dengan air sebelum mengaktifkan fungsi pembersihan pompa.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktifkan fungsi pembersihan pompa dari sisi mesin.",
+    "CL_DV_WM_pump_clean_when_to_use": "Kapan harus digunakan?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Jika Anda ingin mengganti isi kompartemen “Pelembut”, pastikan kompartemen tersebut kosong dan jalankan fungsi pembersihan pompa sebelum penggunaan berikutnya. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2.Lebih dari setengah tahun Anda belum membersihkan Pompa, Anda dapat mengaktifkan fungsi pembersihan pompa.",
+    "CL_DV_WM_standard_auto_does_key": "DOSIS OTOMATIS STANDAR",
+    "CL_DV_WM_compartment_in_use_key": "KOMPARTEMEN YANG SEDANG DIGUNAKAN",
+    "CL_CF_CS_oven_g_800_cs_1": "Atur perangkat ke kondisi pengoperasian normal.\n Ketuk ikon menu.",
+    "CL_CF_CS_oven_g_800_cs_2": "Ketuk dan tahan ikon Wi-Fi selama sekitar 3-6 detik hingga mencapai \"C\" pada garis waktu.",
+    "CL_CF_CS_oven_g_800_cs_3": "Jaringan perangkat sekarang terbuka untuk koneksi selama 5 menit.\n Klik LANJUTKAN untuk melanjutkan.",
+    "CL_CF_CS_oven_g_800_p_1": "Atur perangkat ke kondisi pengoperasian normal.\n Ketuk ikon menu.",
+    "CL_CF_CS_oven_g_800_p_2": "Ketuk dan tahan ikon Wi-Fi selama sekitar 6-9 detik hingga mencapai \"P\" pada garis waktu.",
+    "CL_CF_CS_oven_g_800_p_3": "Perangkat sekarang siap untuk dipasangkan selama 3 menit.\n Klik LANJUTKAN untuk melanjutkan.",
+    "CL_DV_PIND_update_fail_tip1": "Terjadi kesalahan tak terduga. Pembaruan firmware tidak berhasil.",
+    "CL_DV_PIND_update_fail_tip4": "Silakan coba lagi untuk memperbarui aksesori Anda.",
+    "CL_DV_PIND_update_fail_tip2": "Simpan perangkat Anda di dekat Anda saat memperbarui.",
+    "CL_DV_PIND_update_fail_tip3": "Periksa koneksi bluetooth Anda.",
+    "room_good_content": "AC di ruangan ini bagus. Optimalisasi belum diperlukan untuk saat ini.",
+    "edit_address_title": "EDIT ALAMAT",
+    "edit_profile_title": "EDIT PROFIL PENGGUNA"
 }
