--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -3917,7 +3917,7 @@
     "selected_all": "selecionar tudo",
     "set_temp_error": "A temperatura definida não pode ser alcançada. Por favor, modifique a temperatura da água.",
     "no_device_support_eco_key": "Nenhum dispositivo está disponível, certifique-se de que seus dispositivos estão conectados e suportam o modo ECO.",
-    "appliance_disconnect_cannot_open_eco": "O dispositivo está desconectado, verifique se o WiFi e o controle remoto estão habilitados.",
+    "appliance_disconnect_cannot_open_eco": "O dispositivo está desconectado, verifique se o Wi-Fi e o controle remoto estão ativados.",
     "power_on_remote_eabled_tips": "Disponível somente quando o dispositivo está ligado e a inicialização remota está habilitada.",
     "power_on_tips": "Disponível somente quando o dispositivo está ligado.",
     "asko_oven_on_during_on": "LIGADO durante o uso",
@@ -4149,5 +4149,41 @@
     "CL_DV_HOB_refresh_mode": "Modo de atualização",
     "hob_induction3_new_tips": "Aprenda a conectar seus utensílios de cozinha inteligentes e navegue por uma ampla variedade de receitas passo a passo, feitas especificamente para cozinhar com precisão de temperatura.",
     "CL_DV_OV_added_successfully": "Adicionado com sucesso!",
-    "add_routine": "ADICIONE ROTINA"
+    "add_routine": "ADICIONE ROTINA",
+    "CL_DV_PIND_update_blue_tooth": "Certifique-se de que o bluetooth esteja ligado.",
+    "CL_DV_PIND_accessory_firmware_update": "Atualização de firmware do acessório",
+    "CL_CF_CS_ble_scan_not_list": "Se o seu dispositivo não estiver listado, você pode clicar em \"TENTAR NOVAMENTE\" para pesquisar novamente ou clicar em \"PRÓXIMO\" para configurar a rede de outra maneira.",
+    "CL_CF_CS_ble_scan_have_not_found": "Não encontramos nenhum dispositivo com bluetooth. Você pode clicar em \"TENTAR NOVAMENTE\" para pesquisar novamente ou clicar em \"PRÓXIMO\" para configurar a rede de outra maneira.",
+    "CL_DV_WM_pump_cleaning": "Bomba de limpeza...",
+    "CL_DV_WM_autodoes_tip": "Ative esse recurso e seu dispositivo dispensará sabão e amaciante de maneira inteligente enquanto você lava suas roupas.",
+    "CL_DV_WM_detergent_department_key": "COMPARTIMENTO DETERGENTE",
+    "CL_DV_WM_Dosage_Amount_key": "Quantidade de dosagem",
+    "CL_DV_WM_softener_department_key": "COMPARTIMENTO AMACIADOR",
+    "CL_DV_WM_auto_does_with_detergent": "Autodose com detergente",
+    "CL_DV_WM_same_detergent": "Mesmo Detergente",
+    "CL_DV_WM_normal_dosage_weight_tip": "Dosagem normal: 4 a 5 kg de peso de roupa.",
+    "CL_DV_WM_pump_clean_note_1": "Observações: Se você quiser alterar o conteúdo do componente de dispensação, lembre-se de ",
+    "CL_DV_WM_pump_clean_note_2": "limpe o componente primeiro.",
+    "CL_DV_WM_Pump_clean_key": "Bomba limpa",
+    "CL_DV_WM_pump_clean_how_to_use": "Como usar?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1. Esvazie e encha o compartimento com água antes de ativar a função de limpeza da bomba.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Ative a função de limpeza da bomba no lado da máquina.",
+    "CL_DV_WM_pump_clean_when_to_use": "Quando usar?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1. Se desejar trocar o conteúdo do compartimento “Amaciante”, certifique-se de que ele esteja vazio e execute a função de limpeza da bomba antes do próximo uso. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Se você não limpar a bomba por mais de meio ano, poderá ativar a função de limpeza da bomba.",
+    "CL_DV_WM_standard_auto_does_key": "AUTODOSE PADRÃO",
+    "CL_DV_WM_compartment_in_use_key": "COMPARTIMENTO EM USO",
+    "CL_CF_CS_oven_g_800_cs_1": "Coloque o dispositivo em condições normais de operação.\n Toque no ícone do menu.",
+    "CL_CF_CS_oven_g_800_cs_2": "Toque e segure o ícone do Wi-Fi por aproximadamente 3 a 6 segundos até que ele alcance o \"C\" na linha do tempo.",
+    "CL_CF_CS_oven_g_800_cs_3": "A rede do dispositivo agora está aberta para conexão por 5 minutos.\n Clique em PRÓXIMO para continuar.",
+    "CL_CF_CS_oven_g_800_p_1": "Coloque o dispositivo em condições normais de operação.\n Toque no ícone do menu.",
+    "CL_CF_CS_oven_g_800_p_2": "Toque e segure o ícone do Wi-Fi por aproximadamente 6 a 9 segundos até que ele alcance o \"P\" na linha do tempo.",
+    "CL_CF_CS_oven_g_800_p_3": "O dispositivo agora está pronto para pareamento por 3 minutos.\n Clique em PRÓXIMO para continuar.",
+    "CL_DV_PIND_update_fail_tip1": "Ocorreu um erro inesperado. A atualização do firmware não foi bem-sucedida.",
+    "CL_DV_PIND_update_fail_tip4": "Tente atualizar seu acessório novamente.",
+    "CL_DV_PIND_update_fail_tip2": "Mantenha seus dispositivos por perto durante a atualização.",
+    "CL_DV_PIND_update_fail_tip3": "Verifique sua conexão bluetooth.",
+    "room_good_content": "O ar condicionado desta sala é bom. Não é necessária otimização por enquanto.",
+    "edit_address_title": "EDITAR ENDEREÇO",
+    "edit_profile_title": "EDITAR PERFIL DO USUÁRIO"
 }
