--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -3917,7 +3917,7 @@
     "selected_all": "valde alla",
     "set_temp_error": "Den inställda temperaturen kan inte uppnås. Vänligen ändra vattentemperaturen.",
     "no_device_support_eco_key": "Inget enhet är tillgänglig, se till att dina enheter är anslutna och stöder ECO-läge.",
-    "appliance_disconnect_cannot_open_eco": "Enheten är frånkopplad, kontrollera om WiFi och fjärrkontroll är aktiverade.",
+    "appliance_disconnect_cannot_open_eco": "Enheten är frånkopplad, kontrollera om Wi-Fi och fjärrkontroll är aktiverade.",
     "power_on_remote_eabled_tips": "Endast tillgängligt när enheten är påslagen och fjärrstart är aktiverad.",
     "power_on_tips": "Endast tillgänglig när enheten är påslagen.",
     "asko_oven_on_during_on": "PÅ under användning",
@@ -4149,5 +4149,41 @@
     "CL_DV_HOB_refresh_mode": "Uppdateringsläge",
     "hob_induction3_new_tips": "Lär dig hur du ansluter dina smarta köksredskap och bläddrar igenom ett brett utbud av steg-för-steg-recept, speciellt framtagna för exakt temperaturtillagning.",
     "CL_DV_OV_added_successfully": "Tillagd framgångsrikt!",
-    "add_routine": "LÄGG TILL RUTIN"
+    "add_routine": "LÄGG TILL RUTIN",
+    "CL_DV_PIND_update_blue_tooth": "Se till att din bluetooth är påslagen.",
+    "CL_DV_PIND_accessory_firmware_update": "Uppdatering av tillbehörsfirmware",
+    "CL_CF_CS_ble_scan_not_list": "Om din enhet inte finns med i listan kan du klicka på 'FÖRSÖKA IGEN' för att söka igen, eller klicka på 'NÄSTA' för att konfigurera nätverket på annat sätt.",
+    "CL_CF_CS_ble_scan_have_not_found": "Vi har inte hittat någon enhet på bluetooth. Du kan klicka på \"FÖRSÖKA IGEN\" för att söka igen, eller klicka på \"NÄSTA\" för att konfigurera nätverket på annat sätt.",
+    "CL_DV_WM_pump_cleaning": "Rengör pumpen...",
+    "CL_DV_WM_autodoes_tip": "Aktivera den här funktionen så kommer din enhet smart att dosera tvättmedel och sköljmedel medan du tvättar.",
+    "CL_DV_WM_detergent_department_key": "Tvättmedelsfack",
+    "CL_DV_WM_Dosage_Amount_key": "Doseringsmängd",
+    "CL_DV_WM_softener_department_key": "MÖJNINGSFACK",
+    "CL_DV_WM_auto_does_with_detergent": "Autodosera med tvättmedel",
+    "CL_DV_WM_same_detergent": "Samma tvättmedel",
+    "CL_DV_WM_normal_dosage_weight_tip": "Normal dosering: 4~5 kg klädvikt.",
+    "CL_DV_WM_pump_clean_note_1": "Anmärkningar: Om du vill ändra innehållet i dispenseringskomponenten, kom ihåg att göra det ",
+    "CL_DV_WM_pump_clean_note_2": "rengör komponenten först.",
+    "CL_DV_WM_Pump_clean_key": "Pump ren",
+    "CL_DV_WM_pump_clean_how_to_use": "Hur man använder?",
+    "CL_DV_WM_pump_clean_how_to_use_1": "1.Töm och fyll facket med vatten innan du aktiverar pumprengöringsfunktionen.",
+    "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktivera pumprengöringsfunktionen från maskinsidan.",
+    "CL_DV_WM_pump_clean_when_to_use": "När ska man använda?",
+    "CL_DV_WM_pump_clean_when_to_use_1": "1.Om du vill ändra innehållet i \"Mjukgörare\"-facket, se till att det är tomt och kör pumprengöringsfunktionen innan nästa användning. ",
+    "CL_DV_WM_pump_clean_when_to_use_2": "2. Mer än ett halvt år har du inte rengjort pumpen, du kan aktivera pumprengöringsfunktionen.",
+    "CL_DV_WM_standard_auto_does_key": "STANDARD AUTODOS",
+    "CL_DV_WM_compartment_in_use_key": "FACK I ANVÄNDNING",
+    "CL_CF_CS_oven_g_800_cs_1": "Ställ in enheten på normala driftsförhållanden.\n Tryck på menyikonen.",
+    "CL_CF_CS_oven_g_800_cs_2": "Tryck och håll ner Wi-Fi-ikonen i cirka 3-6 sekunder tills den når \"C\" på tidslinjen.",
+    "CL_CF_CS_oven_g_800_cs_3": "Enhetens nätverk är nu öppet för anslutning i 5 minuter.\n Klicka på NÄSTA för att fortsätta.",
+    "CL_CF_CS_oven_g_800_p_1": "Ställ in enheten på normala driftsförhållanden.\n Tryck på menyikonen.",
+    "CL_CF_CS_oven_g_800_p_2": "Tryck och håll ner Wi-Fi-ikonen i cirka 6-9 sekunder tills den når \"P\" på tidslinjen.",
+    "CL_CF_CS_oven_g_800_p_3": "Enheten är nu redo för ihopkoppling i 3 minuter.\n Klicka på NÄSTA för att fortsätta.",
+    "CL_DV_PIND_update_fail_tip1": "Ett oväntat fel inträffade. Uppdateringen av den fasta programvaran misslyckades.",
+    "CL_DV_PIND_update_fail_tip4": "Försök igen för att uppdatera ditt tillbehör.",
+    "CL_DV_PIND_update_fail_tip2": "Håll dina enheter nära medan du uppdaterar.",
+    "CL_DV_PIND_update_fail_tip3": "Kontrollera din bluetooth-anslutning.",
+    "room_good_content": "Detta rums luftkonditionering är bra. Optimering behövs inte för närvarande.",
+    "edit_address_title": "REDIGERA ADRESS",
+    "edit_profile_title": "REDIGERA ANVÄNDARPROFIL"
 }
